--- a/resources/language/resource.language.de_de/strings.po
+++ b/resources/language/resource.language.de_de/strings.po
@@ -12,7 +12,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: en_GB\n"
+"Language: de\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #empty strings from id 32001 to 32100
@@ -41,43 +41,43 @@ msgstr ""
 
 msgctxt "#32111"
 msgid "Location 1"
-msgstr ""
+msgstr "Ort 1"
 
 msgctxt "#32112"
 msgid "Location 2"
-msgstr ""
+msgstr "Ort 2"
 
 msgctxt "#32113"
 msgid "Location 3"
-msgstr ""
+msgstr "Ort 3"
 
 msgctxt "#32114"
 msgid "Location 4"
-msgstr ""
+msgstr "Ort 4"
 
 msgctxt "#32115"
 msgid "Location 5"
-msgstr ""
+msgstr "Ort 5"
 
 msgctxt "#32116"
 msgid "Location 1 ID"
-msgstr ""
+msgstr "Ort 1 ID"
 
 msgctxt "#32117"
 msgid "Location 2 ID"
-msgstr ""
+msgstr "Ort 2 ID"
 
 msgctxt "#32118"
 msgid "Location 3 ID"
-msgstr ""
+msgstr "Ort 3 ID"
 
 msgctxt "#32119"
 msgid "Location 4 ID"
-msgstr ""
+msgstr "Ort 4 ID"
 
 msgctxt "#32120"
 msgid "Location 5 ID"
-msgstr ""
+msgstr "Ort 5 ID"
 
 msgctxt "#32121"
 msgid "Show lat/lon when searching locations"
@@ -476,25 +476,13 @@ msgid "Longitude (example: -90.4392)"
 msgstr ""
 
 msgctxt "#32343"
-msgid "Enter Location"
+msgid "Ort eingeben"
 msgstr ""
 
 msgctxt "#32344"
-msgid "Search for location..."
+msgid "Ort suchen..."
 msgstr ""
 
 msgctxt "#32345"
-msgid "Choose location..."
-msgstr ""
-
-msgctxt "#10000"
-msgid "Berlin"
-msgstr ""
-
-msgctxt "#10001"
-msgid "Bramsche"
-msgstr ""
-
-msgctxt "#10002"
-msgid "Sonstwo"
+msgid "Ort auswählen..."
 msgstr ""
