Fixed errors with icons and translation.

--- a/resources/language/resource.language.de_de/strings.po
+++ b/resources/language/resource.language.de_de/strings.po
@@ -476,13 +476,13 @@ msgid "Longitude (example: -90.4392)"
 msgstr ""
 
 msgctxt "#32343"
-msgid "Ort eingeben"
-msgstr ""
+msgid "Enter Location"
+msgstr "Suche Ort..."
 
 msgctxt "#32344"
-msgid "Ort suchen..."
-msgstr ""
+msgid "Search for location..."
+msgstr "Suche nach Ort..."
 
 msgctxt "#32345"
-msgid "Ort auswählen..."
-msgstr ""
+msgid "Choose location..."
+msgstr "Ort auswählen..."
