--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -119,309 +119,7 @@ msgctxt "#32130"
 msgid "Download weather maps"
 msgstr ""
 
-msgctxt "#32201"
-msgid "Thunderstorm with light rain"
-msgstr ""
-
-msgctxt "#32202"
-msgid "Thunderstorm with rain"
-msgstr ""
-
-msgctxt "#32203"
-msgid "Thunderstorm with heavy rain"
-msgstr ""
-
-msgctxt "#32204"
-msgid "Light thunderstorm"
-msgstr ""
-
-msgctxt "#32205"
-msgid "Thunderstorm"
-msgstr ""
-
-msgctxt "#32206"
-msgid "Heavy thunderstorm"
-msgstr ""
-
-msgctxt "#32207"
-msgid "Ragged thunderstorm"
-msgstr ""
-
-msgctxt "#32208"
-msgid "Thunderstorm with light drizzle"
-msgstr ""
-
-msgctxt "#32209"
-msgid "Thunderstorm with drizzle"
-msgstr ""
-
-msgctxt "#32210"
-msgid "Thunderstorm with heavy drizzle"
-msgstr ""
-
-msgctxt "#32211"
-msgid "Light intensity drizzle"
-msgstr ""
-
-msgctxt "#32212"
-msgid "Drizzle"
-msgstr ""
-
-msgctxt "#32213"
-msgid "Heavy intensity drizzle"
-msgstr ""
-
-msgctxt "#32214"
-msgid "Light intensity drizzle rain"
-msgstr ""
-
-msgctxt "#32215"
-msgid "Drizzle rain"
-msgstr ""
-
-msgctxt "#32216"
-msgid "Heavy intensity drizzle rain"
-msgstr ""
-
-msgctxt "#32217"
-msgid "Shower rain and drizzle"
-msgstr ""
-
-msgctxt "#32218"
-msgid "Heavy shower rain and drizzle"
-msgstr ""
-
-msgctxt "#32219"
-msgid "Shower drizzle"
-msgstr ""
-
-msgctxt "#32220"
-msgid "Light rain"
-msgstr ""
-
-msgctxt "#32221"
-msgid "Moderate rain"
-msgstr ""
-
-msgctxt "#32222"
-msgid "Heavy intensity rain"
-msgstr ""
-
-msgctxt "#32223"
-msgid "Very heavy rain"
-msgstr ""
-
-msgctxt "#32224"
-msgid "Extreme rain"
-msgstr ""
-
-msgctxt "#32225"
-msgid "Freezing rain"
-msgstr ""
-
-msgctxt "#32226"
-msgid "Light intensity shower rain"
-msgstr ""
-
-msgctxt "#32227"
-msgid "Shower rain"
-msgstr ""
-
-msgctxt "#32228"
-msgid "Heavy intensity shower rain"
-msgstr ""
-
-msgctxt "#32229"
-msgid "Ragged shower rain"
-msgstr ""
-
-msgctxt "#32230"
-msgid "Light snow"
-msgstr ""
-
-msgctxt "#32231"
-msgid "Snow"
-msgstr ""
-
-msgctxt "#32232"
-msgid "Heavy snow"
-msgstr ""
-
-msgctxt "#32233"
-msgid "Sleet"
-msgstr ""
-
-msgctxt "#32234"
-msgid "Shower sleet"
-msgstr ""
-
-msgctxt "#32235"
-msgid "Light rain and snow"
-msgstr ""
-
-msgctxt "#32236"
-msgid "Rain and snow"
-msgstr ""
-
-msgctxt "#32237"
-msgid "Light shower snow"
-msgstr ""
-
-msgctxt "#32238"
-msgid "Shower snow"
-msgstr ""
-
-msgctxt "#32239"
-msgid "Heavy shower snow"
-msgstr ""
-
-msgctxt "#32240"
-msgid "Mist"
-msgstr ""
-
-msgctxt "#32241"
-msgid "Smoke"
-msgstr ""
-
-msgctxt "#32242"
-msgid "Haze"
-msgstr ""
-
-msgctxt "#32243"
-msgid "Sand, dust whirls"
-msgstr ""
-
-msgctxt "#32244"
-msgid "Fog"
-msgstr ""
-
-msgctxt "#32245"
-msgid "Sand"
-msgstr ""
-
-msgctxt "#32246"
-msgid "Dust"
-msgstr ""
-
-msgctxt "#32247"
-msgid "Volcanic ash"
-msgstr ""
-
-msgctxt "#32248"
-msgid "Squalls"
-msgstr ""
-
-msgctxt "#32249"
-msgid "Tornado"
-msgstr ""
-
-msgctxt "#32250"
-msgid "Clear sky"
-msgstr ""
-
-msgctxt "#32251"
-msgid "Few clouds"
-msgstr ""
-
-msgctxt "#32252"
-msgid "Scattered clouds"
-msgstr ""
-
-msgctxt "#32253"
-msgid "Broken clouds"
-msgstr ""
-
-msgctxt "#32254"
-msgid "Overcast clouds"
-msgstr ""
-
-msgctxt "#32255"
-msgid "Tornado"
-msgstr ""
-
-msgctxt "#32256"
-msgid "Tropical storm"
-msgstr ""
-
-msgctxt "#32257"
-msgid "Hurricane"
-msgstr ""
-
-msgctxt "#32258"
-msgid "Cold"
-msgstr ""
-
-msgctxt "#32259"
-msgid "Hot"
-msgstr ""
-
-msgctxt "#32260"
-msgid "Windy"
-msgstr ""
-
-msgctxt "#32261"
-msgid "Hail"
-msgstr ""
-
-msgctxt "#32262"
-msgid "Calm"
-msgstr ""
-
-msgctxt "#32263"
-msgid "Light breeze"
-msgstr ""
-
-msgctxt "#32264"
-msgid "Gentle breeze"
-msgstr ""
-
-msgctxt "#32265"
-msgid "Moderate breeze"
-msgstr ""
-
-msgctxt "#32266"
-msgid "Fresh breeze"
-msgstr ""
-
-msgctxt "#32267"
-msgid "Strong breeze"
-msgstr ""
-
-msgctxt "#32268"
-msgid "High wind, near gale"
-msgstr ""
-
-msgctxt "#32269"
-msgid "Gale"
-msgstr ""
-
-msgctxt "#32270"
-msgid "Severe gale"
-msgstr ""
-
-msgctxt "#32271"
-msgid "Storm"
-msgstr ""
-
-msgctxt "#32272"
-msgid "Violent storm"
-msgstr ""
-
-msgctxt "#32273"
-msgid "Hurricane"
-msgstr ""
-
-msgctxt "#32274"
-msgid "Clear"
-msgstr ""
-
-msgctxt "#32275"
-msgid "Clouds"
-msgstr ""
-
-msgctxt "#32276"
-msgid "Rain"
-msgstr ""
+#empty strings from id 32201 to 32276
 
 msgctxt "#32331"
 msgid "Select Local Weather Station"
