Changed translation for Kodi setting.

--- a/resources/language/resource.language.de_de/strings.po
+++ b/resources/language/resource.language.de_de/strings.po
@@ -197,4 +197,4 @@ msgstr "Addon-Einstellungen"
 
 msgctxt "#32351"
 msgid "Cache lifetime"
-msgstr "Gültigkeitsdauer des Cache"
+msgstr "Gültigkeitsdauer des Cache in Stunden"
