--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,8 @@
+v0.7.2
+- Fix problem if cache file does not exist.
 v0.7.1
-- fix some syntax errors on python 3.11
-- check addon_data path exists
+- Fix some syntax errors on python 3.11.
+- Check addon_data path exists.
 v0.7.0
 - Changed default cache lifetime.
 - Provided setting for cache lifetime.
